tests/neg/recursive-type.stk
type A = A => Any
type B = B => Int

fun test(a: B): A = a // error
